<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_bus_timetable"
            android:icon="@drawable/ic_menu_timetable"
            android:title="@string/timetables" />
        <item
            android:id="@+id/nav_fares"
            android:icon="@drawable/ic_menu_fare_calculator"
            android:title="@string/fare_calculator" />
        <item
            android:id="@+id/nav_journey"
            android:icon="@drawable/ic_menu_journey_planner"
            android:title="@string/plan_your_journey" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/areyeng_map" />
        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/ic_menu_nfc"
            android:title="@string/areyeng_cards" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
