<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_bus_fare"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context="za.co.gundula.app.arereyeng.ui.BusFareActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="?colorPrimary"
        android:elevation="@dimen/action_bar_elevation">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/list_toolbar_side_margin"
            android:layout_marginRight="@dimen/list_toolbar_side_margin"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bus_fare_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/info_text"
                android:layout_margin="@dimen/margin_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <AutoCompleteTextView
                android:id="@+id/from_bus_station"
                android:hint="@string/from_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/edit_text_padding"
                android:paddingRight="@dimen/edit_text_padding"
                android:paddingLeft="@dimen/edit_text_padding" />

            <AutoCompleteTextView
                android:id="@+id/to_bus_station"
                android:hint="@string/to_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/edit_text_padding"
                android:paddingRight="@dimen/edit_text_padding"
                android:paddingLeft="@dimen/edit_text_padding" />

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <LinearLayout
                    android:id="@+id/linear_detail"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:padding="@dimen/edit_text_padding">

                    <TextView
                        android:id="@+id/journey_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:text="@string/detail_journey"
                        android:paddingTop="@dimen/edit_text_padding"
                        android:paddingBottom="@dimen/edit_text_padding" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_margin">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/distance"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/secondary_text" />

                        <TextView

                            android:id="@+id/journey_distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/secondary_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_margin">

                        <TextView
                            android:id="@+id/duration_heading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:text="@string/duration" />

                        <TextView
                            android:id="@+id/journey_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/fare_type"
                        android:layout_marginTop="@dimen/text_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_margin">

                        <TextView
                            android:id="@+id/cost_heading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cost" />

                        <TextView
                            android:id="@+id/journey_cost"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/error_message"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
